test/good/arrays/empty08.px

class A def
    a: [Bool] = []

x = A()
print x.a + [false]
