test/bad/generics/method03.px

class A def
    func f() def
        return false
        return
